--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="gridLayoutWidget">
+   <widget class="QWidget" name="gridWidget" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -30,9 +30,6 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="name_lineEdit"/>
-     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label_thelephone">
        <property name="sizePolicy">
@@ -46,19 +43,6 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QPushButton" name="pb_toJSON">
-       <property name="text">
-        <string>To JSON</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QListWidget" name="listWidget"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="tel_lineEdit"/>
-     </item>
      <item row="2" column="1">
       <widget class="QLabel" name="lable_name">
        <property name="text">
@@ -66,11 +50,75 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="name_lineEdit"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="tel_lineEdit"/>
+     </item>
+     <item row="11" column="1">
+      <widget class="QListWidget" name="listWidget"/>
+     </item>
+     <item row="6" column="1">
+      <widget class="QPushButton" name="pb_toJSON">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>To JSON</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>553</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionExit"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>276</x>
+     <y>239</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
