--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,7 +31,7 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="1">
-      <widget class="QLabel" name="label_thelephone">
+      <widget class="QLabel" name="label_telephone">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -39,7 +39,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Enter your thelephone number:</string>
+        <string>Enter your telephone number:</string>
        </property>
       </widget>
      </item>
