--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="11" column="1">
+     <item row="15" column="1">
       <widget class="QListWidget" name="listWidget">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -40,7 +40,10 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="tel_lineEdit"/>
+     </item>
+     <item row="3" column="1">
       <widget class="QLabel" name="label_telephone">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -53,26 +56,7 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="name_lineEdit"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="tel_lineEdit"/>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="lable_name">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Enter name:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1" rowspan="2">
+     <item row="8" column="1" rowspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="pb_toJSON">
@@ -103,7 +87,10 @@
        </item>
       </layout>
      </item>
-     <item row="12" column="1">
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="name_lineEdit"/>
+     </item>
+     <item row="16" column="1">
       <widget class="QGroupBox" name="groupBox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -143,6 +130,26 @@
          </item>
         </layout>
        </widget>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="lable_name">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Enter name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLabel" name="id_label">
+       <property name="text">
+        <string>Id:</string>
+       </property>
       </widget>
      </item>
     </layout>
